SimpleSeer/static/app/styles/application.less
html, body, div, span,
h1, h2, h3, h4, h5, h6,
p, blockquote, pre, a,
code,img, strike, sub,
sup, ol, ul, li, fieldset,
form, label, legend, table,
caption, tbody, tfoot,
thead, tr, th, td, canvas, 
audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

ol, ul {
  list-style: none;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

body {
  font-family: 'Open Sans', Helvetica, Arial, sans-serif !important;
  font-size: 13px;
  line-height: 18px;
  color: #000;
  overflow: hidden;
}

/** Resize Handles **/

.resize {
  background: transparent;
  cursor: col-resize;
  z-index: 100;

  &[data-handle=e], &[data-handle=w] {
    position: absolute;
    height: 100%;
    width: 4px;
  }

  &[data-handle=e] {
    left: 0px;
  }

  &[data-handle=w] {
    right: -4px;
  }

  &[data-handle=n], &[data-handle=s] {
    position: absolute;
    height: 4px;
    width: 100%;
  }

  &[data-handle=n] {
    top: 0px;
  }

  &[data-handle=s] {
    bottom: 0px;
  }
}

.scrollY {
  overflow-y: auto;
}

.scrollX {
  overflow-x: auto;
}

body {
  *::-webkit-scrollbar { width: 12px; background-color: #414141; }
  *::-webkit-scrollbar-corner { background-color: #d1d1d1; }
  *::-webkit-scrollbar-thumb {
    background: #888 url("/img/seer/grippy.png") no-repeat center center;
    border: 1px solid #444;
    &:horizontal { border-width: 1px 0 0 0; }
    &:vertical { border-width: 0 0 0 1px; }
  }
  *::-webkit-scrollbar-track {
    border: 1px solid #555;
    background-color: #d1d1d1;
    &:horizontal { border-width: 1px 0 0 0; }
    &:vertical { border-width: 0 0 0 1px; }
  }
}

